@@ -47,11 +47,12 @@
 #define DEFAULT_SORTKEY            'v'  /**< the default key for variable sorting */
 #define DEFAULT_SORTVARS         TRUE   /**< should variables be processed in sorted order? */
 #define DEFAULT_COLLECTSTATS     TRUE   /**< should variable statistics be collected during probing? */
-#define DEFAULT_STOPAFTERFEASIBLE TRUE   /**< Should the heuristic stop calculating optimal shift values when no more rows are violated? */
-#define DEFAULT_PREFERBINARIES   FALSE   /**< Should binary variables be shifted first? */
+#define DEFAULT_STOPAFTERFEASIBLE TRUE  /**< Should the heuristic stop calculating optimal shift values when no more rows are violated? */
+#define DEFAULT_PREFERBINARIES   FALSE  /**< Should binary variables be shifted first? */
 #define SORTKEYS                 "nrtuv"/**< options sorting key: (n)orms down, norms (u)p, (v)iolated rows decreasing,
-                                        viola(t)ed rows increasing, or (r)andom */
+                                         *   viola(t)ed rows increasing, or (r)andom */
 #define DEFAULT_NOZEROFIXING      FALSE /**< should variables with a zero shifting value be delayed instead of being fixed? */
+#define DEFAULT_FIXBINLOCKS       FALSE /**< should binary variables with no locks in one direction be fixed to that direction? */
 
 #define EVENTHDLR_NAME         "eventhdlrshiftandpropagate"
 #define EVENTHDLR_DESC         "event handler to catch bound changes"
@@ -82,6 +83,7 @@ struct SCIP_HeurData
                                               *   more rows are violated? */
    SCIP_Bool             preferbinaries;     /**< Should binary variables be shifted first? */
    SCIP_Bool             nozerofixing;       /**< should variables with a zero shifting value be delayed instead of being fixed? */
+   SCIP_Bool             fixbinlocks;        /**< should binary variables with no locks in one direction be fixed to that direction? */
    SCIPstatistic(
       SCIP_LPSOLSTAT     lpsolstat;          /**< the probing status after probing */
       SCIP_Longint       ntotaldomredsfound; /**< the total number of domain reductions during heuristic */
@@ -813,7 +815,7 @@ SCIP_Real retransformVariable(
    {
       assert(!SCIPisInfinity(scip, -SCIPvarGetLbLocal(var)));
 
-      return solvalue += matrix->transformshiftvals[varindex];
+      return solvalue + matrix->transformshiftvals[varindex];
    }
    else if( status == TRANSFORMSTATUS_NEG )
    {
@@ -1757,45 +1759,60 @@ SCIP_DECL_HEUREXEC(heurExecShiftandpropagate)
       
       marksuspicious = FALSE;
 
-      /* only apply the computationally expensive best shift selection, if there is a violated row left */
-      if( !heurdata->stopafterfeasible || nviolatedrows > 0 )
+      /* check whether the variable is binary and has no locks in one direction, so that we want to fix it to the
+       * respective bound (only enabled by parameter)
+       */
+      if( heurdata->fixbinlocks && SCIPvarIsBinary(var) && (SCIPvarGetNLocksUp(var) == 0 || SCIPvarGetNLocksDown(var) == 0) )
       {
-         /* compute optimal shift value for variable */
-         SCIP_CALL( getOptimalShiftingValue(scip, matrix, permutedvarindex, 1, rowweights, steps, violationchange,
-               &optimalshiftvalue, &nviolations) );
-         assert(SCIPisFeasGE(scip, optimalshiftvalue, 0.0));
-
-         /* Variables with FREE transform have to be dealt with twice */
-         if( matrix->transformstatus[permutedvarindex] == TRANSFORMSTATUS_FREE )
+         if( SCIPvarGetNLocksUp(var) == 0 )
+            origsolval = SCIPvarGetUbLocal(var);
+         else
          {
-            SCIP_Real downshiftvalue;
-            int ndownviolations;
-
-            downshiftvalue = 0.0;
-            ndownviolations = 0;
-            SCIP_CALL( getOptimalShiftingValue(scip, matrix, permutedvarindex, -1, rowweights, steps, violationchange,
-                  &downshiftvalue, &ndownviolations) );
-
-            assert(SCIPisLE(scip, downshiftvalue, 0.0));
-
-            /* compare to positive direction and select the direction which makes more rows feasible */
-            if( ndownviolations < nviolations )
-            {
-               optimalshiftvalue = downshiftvalue;
-            }
+            assert(SCIPvarGetNLocksDown(var) == 0);
+            origsolval = SCIPvarGetLbLocal(var);
          }
       }
       else
-         optimalshiftvalue = 0.0;
-      
-      /* if zero optimal shift values are forbidden by the user parameter, delay the variable by marking it suspicious */
-      if( heurdata->nozerofixing && nviolations > 0 && SCIPisFeasZero(scip, optimalshiftvalue) )
-         marksuspicious = TRUE;
+      {
+         /* only apply the computationally expensive best shift selection, if there is a violated row left */
+         if( !heurdata->stopafterfeasible || nviolatedrows > 0 )
+         {
+            /* compute optimal shift value for variable */
+            SCIP_CALL( getOptimalShiftingValue(scip, matrix, permutedvarindex, 1, rowweights, steps, violationchange,
+                  &optimalshiftvalue, &nviolations) );
+            assert(SCIPisFeasGE(scip, optimalshiftvalue, 0.0));
 
-      /* retransform the solution value from the heuristic transformation space */
-      origsolval = retransformVariable(scip, matrix, var, permutedvarindex, optimalshiftvalue);
+            /* Variables with FREE transform have to be dealt with twice */
+            if( matrix->transformstatus[permutedvarindex] == TRANSFORMSTATUS_FREE )
+            {
+               SCIP_Real downshiftvalue;
+               int ndownviolations;
+
+               downshiftvalue = 0.0;
+               ndownviolations = 0;
+               SCIP_CALL( getOptimalShiftingValue(scip, matrix, permutedvarindex, -1, rowweights, steps, violationchange,
+                     &downshiftvalue, &ndownviolations) );
+
+               assert(SCIPisLE(scip, downshiftvalue, 0.0));
+
+               /* compare to positive direction and select the direction which makes more rows feasible */
+               if( ndownviolations < nviolations )
+               {
+                  optimalshiftvalue = downshiftvalue;
+               }
+            }
+         }
+         else
+            optimalshiftvalue = 0.0;
+
+         /* if zero optimal shift values are forbidden by the user parameter, delay the variable by marking it suspicious */
+         if( heurdata->nozerofixing && nviolations > 0 && SCIPisFeasZero(scip, optimalshiftvalue) )
+            marksuspicious = TRUE;
+
+         /* retransform the solution value from the heuristic transformation space */
+         origsolval = retransformVariable(scip, matrix, var, permutedvarindex, optimalshiftvalue);
+      }
       assert(SCIPisFeasGE(scip, origsolval, lb) && SCIPisFeasLE(scip, origsolval, ub));
-
 
       /* check if propagation should still be performed */
       if( nprobings > DEFAULT_PROPBREAKER )
@@ -1922,7 +1939,6 @@ SCIP_DECL_HEUREXEC(heurExecShiftandpropagate)
          /* get the column position of the variable */
          permutedvarindex = permutation[v];
          var = SCIPcolGetVar(heurdata->lpcols[permutedvarindex]);
-
          assert(SCIPvarGetType(var) != SCIP_VARTYPE_CONTINUOUS);
 
          /* update the transformation of the variable, since the bound might have changed after the last update. */
@@ -2191,5 +2207,7 @@ SCIP_RETCODE SCIPincludeHeurShiftandpropagate(
          &heurdata->preferbinaries, TRUE, DEFAULT_PREFERBINARIES, NULL, NULL) );
    SCIP_CALL( SCIPaddBoolParam(scip, "heuristics/shiftandpropagate/nozerofixing", "should variables with a zero shifting value be delayed instead of being fixed?",
             &heurdata->nozerofixing, TRUE, DEFAULT_NOZEROFIXING, NULL, NULL) );
+   SCIP_CALL( SCIPaddBoolParam(scip, "heuristics/shiftandpropagate/fixbinlocks", "should binary variables with no locks in one direction be fixed to that direction?",
+            &heurdata->fixbinlocks, TRUE, DEFAULT_FIXBINLOCKS, NULL, NULL) );
    return SCIP_OKAY;
 }
